<resources>
    <string name="app_name">quiz_app</string>
    <string name="app">Quiz</string>
    <string name="title">Title</string>
    <string name="book_maks">Bookmarks</string>
    <string name="play_quiz">Start quiz</string>
    <string name="sets">Sets</string>
    <string name="_1">1</string>
    <string name="marks_5_10" />
    <string name="textview">TextView</string>
    <string name="next" />
    <string name="share" />
    <string name="button">Button</string>
    <string name="todo">TODO</string>
    <string name="score">Score</string>
    <string name="s5">5</string>
    <string name="out_of_10">OUT OF 10</string>
    <string name="done">DONE</string>
    <string name="question">question</string>
    <string name="answer">answer</string>
</resources>