<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ScoreActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        android:background="@color/colorPrimary"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAlignment="center"
            android:text="@string/app" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/score" />

        <TextView
            android:id="@+id/scored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/s5"/>

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:text="@string/out_of_10"/>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    <Button
        android:id="@+id/doneBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_corners"
        android:layout_gravity="center"
        android:text="@string/done" />
    </FrameLayout>

</LinearLayout>